--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Cryosoft for Businesses</title>
     <meta name="theme-color" content="#1b1e34">
     <meta name="twitter:title" content="Cryosoft For Businesses">
-    <meta name="twitter:image" content="assets/img/colored_transparent_logo.png">
-    <meta property="og:image" content="assets/img/colored_transparent_logo.png">
+    <meta name="twitter:image" content="https://business.cryosoft.co.ke/assets/img/colored_transparent_logo.png">
+    <meta property="og:image" content="https://business.cryosoft.co.ke/assets/img/colored_transparent_logo.png">
     <meta name="description" content="Cryosoft for Businesses will help you get your business online and we'll help you though exactly that, no compromise!">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary">
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="308x303" href="assets/img/colored_transparent_logo.png">
     <link rel="icon" type="image/png" sizes="308x303" href="assets/img/colored_transparent_logo.png">
     <link rel="icon" type="image/png" sizes="308x303" href="assets/img/colored_transparent_logo.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
@@ -31,14 +31,14 @@
                 <h1 class="display-4 text-center text-light">When it comes to business, we mean it!</h1>
                 <p class="text-center text-white">The 2020 COVID-19 Pandemic Taught us one thing, businesses need to have an online presence. We help you through that. Every single step. Ready to start?</p>
             </div>
-            <div class="buttons"><a class="btn btn-primary" role="button" href="https://wa.me/254774115452/?text=Hello!%20I%27d%20like%20to%20get%20my%20business%20online.">Talk to us today</a><a class="btn btn-light" role="button" href="https://cryosoft.co.ke/projects.html">See who we have helped</a></div>
+            <div class="buttons"><a class="btn btn-primary" role="button" href="https://wa.me/254703756325/?text=Hello!%20I%27d%20like%20to%20get%20my%20business%20online.">Talk to us today</a><a class="btn btn-light" role="button" href="https://cryosoft.co.ke/projects.html">See who we have helped</a></div>
         </div>
     </div>
     <footer class="fixed-bottom mx-auto text-center text-white"><img src="assets/img/colored_transparent_logo.png" width="45px" height="45px">
         <p>An initiative of&nbsp;<a href="https://cryosoft.co.ke">Cryosoft Corporation</a></p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.min.js"></script>
 </body>
 
