UPD: Upd number to +254771226551 and custom msg

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h1 class="display-4 text-center text-light">When it comes to business, we mean it!</h1>
                 <p class="text-center text-white">The 2020 COVID-19 Pandemic Taught us one thing, businesses need to have an online presence. We help you through that. Every single step. Ready to start?</p>
             </div>
-            <div class="buttons"><a class="btn btn-primary" role="button" href="https://wa.me/254703756325/?text=Hello!%20I%27d%20like%20to%20get%20my%20business%20online.">Talk to us today</a><a class="btn btn-light" role="button" href="https://cryosoft.co.ke/projects.html">See who we have helped</a></div>
+            <div class="buttons"><a class="btn btn-primary" role="button" href="https://wa.me/+254771226551?text=Hello!%20I%20am%20interested%20in%20your%20services!">Talk to us today</a><a class="btn btn-light" role="button" href="https://cryosoft.co.ke/projects.html">See who we have helped</a></div>
         </div>
     </div>
     <footer class="fixed-bottom mx-auto text-center text-white"><img src="assets/img/colored_transparent_logo.png" width="45px" height="45px">
